src/main/java/com/example/RestTicketSystem/error/exception/TicketNotFoundException.java
package com.example.RestTicketSystem.error.exception;

public class TicketNotFoundException extends RuntimeException {
    public TicketNotFoundException(Integer id) {
        super("Stadium id not found: " + id);
    }
}
